--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>ACDL</h2>
+                <h2>CMTCL</h2>
                 <p>v1.6.7</p>
             </div>
             <nav class="nav">
